--- a/languages/wp-nabezky-connector-sk_SK.po
+++ b/languages/wp-nabezky-connector-sk_SK.po
@@ -1,8 +1,8 @@
-# Copyright (C) 2024 Na bezky!
-# This file is distributed under the same license as the WP Na bezky! Connector plugin.
+# Copyright (C) 2025 Na Bežky
+# This file is distributed under the same license as the Mapa Na Bežky pre WooCommerce plugin.
 msgid ""
 msgstr ""
-"Project-Id-Version: WP Na bezky! Connector 1.0.0\n"
+"Project-Id-Version: Mapa Na Bežky pre WooCommerce 1.0.0\n"
 "Report-Msgid-Bugs-To: https://nabezky.sk\n"
 "POT-Creation-Date: 2024-01-01 12:00+0000\n"
 "MIME-Version: 1.0\n"
@@ -17,11 +17,14 @@ msgstr ""
 "X-Domain: wp-nabezky-connector\n"
 
 # Plugin header
-msgid "WP Na bezky! Connector"
-msgstr "WP Na bezky! Pripojovací modul"
+msgid "Na Bežky Map for WooCommerce"
+msgstr "Mapa Na Bežky pre WooCommerce"
 
-msgid "Na bezky! Connector"
-msgstr "Na bezky! Pripojovací modul"
+msgid "Na Bežky Map"
+msgstr "Mapa Na Bežky"
+
+msgid "Enables automatic assignment of access to the Na Bežky map for selected WooCommerce products"
+msgstr "Umožňuje automatické priradenie prístupu k mape Na Bežky pre vybrané produkty vo WooCommerce"
 
 msgid "Settings"
 msgstr "Nastavenia"
@@ -559,19 +562,3 @@ msgstr "Test pripojenia zlyhal s neočakávanou chybou"
 
 msgid "Unexpected error"
 msgstr "Neočakávaná chyba"
-
-# New failure handling strings
-msgid "Vouchers not generated in eshop"
-msgstr "Poukážky neboli vygenerované v eshope"
-
-msgid "The vouchers for order %s and buyer email %s were not created and they need to be generated manually."
-msgstr "Poukážky pre objednávku %s a email kupujúceho %s neboli vytvorené a musia byť vygenerované manuálne."
-
-msgid "Immediate processing of your map access was not successful. After setting it up by the administrator, we will contact you"
-msgstr "Okamžité spracovanie vášho prístupu k mape nebolo úspešné. Po jeho nastavení administrátorom vás budeme kontaktovať"
-
-msgid "Invalid order ID"
-msgstr "Neplatné ID objednávky"
-
-msgid "No Nabezky products in this order"
-msgstr "V tejto objednávke nie sú žiadne produkty Nabezky"
