--- a/languages/wp-nabezky-connector-cs_CZ.po
+++ b/languages/wp-nabezky-connector-cs_CZ.po
@@ -100,14 +100,14 @@ msgstr "Informace o modulu"
 msgid "How it works"
 msgstr "Jak to funguje"
 
-msgid "Customer completes a WooCommerce order containing configured Nabezky products"
-msgstr "Zákazník dokončí WooCommerce objednávku obsahující nakonfigurované Na bežky produkty"
+msgid "Customer completes a WooCommerce order containing configured products marked on plugin settings page"
+msgstr "Zákazník dokončí WooCommerce objednávku obsahující nakonfigurované produkty označené na stránce nastavení doplňku"
 
 msgid "Plugin sends order details to Nabezky API for voucher generation"
 msgstr "Modul pošle detaily objednávky do Na bežky API na generování poukazů"
 
-msgid "Nabezky generates vouchers and sends callback with voucher information"
-msgstr "Na bežky vygeneruje poukazy a pošle callback s informacemi o poukazech"
+msgid "Nabezky generates vouchers and sends voucher numbers back to the plugin"
+msgstr "Na bežky vygeneruje poukazy a pošle jejich čísla zpět do doplňku"
 
 msgid "Customer receives voucher information via email and on the thank you page"
 msgstr "Zákazník dostane informace o poukazech e-mailem a na stránce děkujeme"
@@ -127,8 +127,8 @@ msgstr "Generovány, když hodnota objednávky >= cena sezónní permanentky. Pl
 msgid "3-Day Vouchers:"
 msgstr "3denní poukazy:"
 
-msgid "Generated when order value < Season Pass Price. Valid for 3 days from generation."
-msgstr "Generovány, když hodnota objednávky < cena sezónní permanentky. Platné 3 dny od generování."
+msgid "Generated when order value < Season Pass Price. Valid for 3 days from first use."
+msgstr "Generovány, když hodnota objednávky < cena sezónní permanentky. Platné 3 dny od okamžiku prvního použití."
 
 msgid "Registered User Access:"
 msgstr "Přístup registrovaného uživatele:"
@@ -172,23 +172,6 @@ msgstr "Konfigurace produktů"
 msgid "Select which WooCommerce products should trigger Nabezky voucher generation when purchased. Only orders containing these products will be processed."
 msgstr "Vyberte, které WooCommerce produkty by měly spustit generování Na bežky poukazů při koupi. Budou zpracovány pouze objednávky obsahující tyto produkty."
 
-msgid "Map Access Options"
-msgstr "Možnosti přístupu k mapě"
-
-msgid "Configure where customers will access the Nabezky map:"
-msgstr "Nakonfigurujte, kde si zákazníci budou moci zobrazit mapu Na bežky:"
-
-msgid "Direct Access:"
-msgstr "Přímý přístup:"
-
-msgid "Link to mapa.nabezky.sk with voucher parameters"
-msgstr "Odkaz na mapa.nabezky.sk s parametry poukazu"
-
-msgid "Embedded Access:"
-msgstr "Vložený přístup:"
-
-msgid "Link to your own embedded iframe with proper authentication"
-msgstr "Odkaz na váš vlastní vložený iframe se správnou autentifikací"
 
 msgid "WooCommerce Integration"
 msgstr "WooCommerce integrace"
